# volumeRenderer

./: .cproject  .project  CMakeLists.txt  Dimensions.txt  Volume.txt  Volume.txt~  allVolume.txt
Matlab/: FunctionalPSNRForAll.m  FunctionalPSNRForAll.m~  LighttimeGraph.m  LighttimeGraph.m~  ML.m  StY.m  StY.m~  binaryReadTest.m  calculatePSNR.m  calculatePSNR.m~  colorOutputTest.m  colorOutputTest.m~  gtTerst.m  gtTerst.m~  imageGeneratorFromFile  imageGeneratorFromFile.m  isoSurfacetimeGraph.m  marschnerlobbGenerator.m  marschnerlobbGenerator.m~  pixShufflePadding.m  pixShufflePadding.m~  pixelShuffle.m  pixelShuffle.m~  pixelShuffleAllPercentage.m  pixelShuffleAllPercentage.m~  pixelShuffleAllPercentage30July.m  pixelShuffleAllPercentage30July.m~  pixelShuffleAllPercentagePadding.m  pixelShuffleAllPercentagePadding.m~  pixelShuffleAllPercentagePadding30July.m  pixelShuffleAllPercentagePadding30July.m~  psnrForAll.m  psnrForAll.m~  psnrForCubic.m  psnrForCubic.m~  psnrForIsoSurface.m  psnrForIsoSurface.m~  psnrForLighting.m  psnrForLighting.m~  psnrForLinear.m  (+27 more)
cpp_src/: deviceVars.h  header (copy).h  header.h  main (copy).cpp  main.cpp
cuda_src/: kernel (copy).cu  kernel (copy).h  kernel(old).cu  kernel.cu  kernel.h  reconstruction.h  reconstructionkernel.cu
resultImages/: fpsComparison.epsc  psnrLightingCubic.epsc
textFiles/: Pattern.txt  StY.txt  blueImage.txt  blueOutRecon.txt  blueOutRecon_1.txt  blueOutVol.txt  blueOutVol_1.txt  blueStY.txt  finalPattern.txt  greenImage.txt  greenOutRecon.txt  greenOutRecon_1.txt  greenOutVol.txt  greenOutVol_1.txt  (+12 more)
(+67 files in other folders)
